Se corrigen errores en login

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <label for="password">Contraseña</label>
                         <input id="password" type="password" placeholder="Contraseña" name="password" required>
                         
-                        <button type="submit" title="Ingresar" id="Ingresar" name="Ingresar" onclick="login(username,password)">Login</button>
+                        <button type="submit" title="Ingresar" id="Ingresar" name="Ingresar" onclick="login()">Login</button>
                     </form>
                 </div>
                 <div id="derecho">
