Se agrega pagina principal, listado de objetos y filtro

--- a/WEB/registro.html
+++ b/WEB/registro.html
@@ -23,6 +23,7 @@
       <div id="number" class="criteria">Debe incluir al menos un número</div>
 
       <button type="submit">Registrarse</button>
+      <button type="button" onclick="window.location='../index.html'">Regresar</button>
     </form>
   </div>
 
