--- a/WEB/principal.html
+++ b/WEB/principal.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hotel Tipton</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="../CSS/main.css">
 </head>
 <body>
-    <H1 class="titulo">HOLA MUNDO</H1>
+
+    <div class="wrapper">
+        <header class="header-mobile">
+            <h1 class="logo">Hotel Tipton</h1>
+            <button class="open-menu" id="open-menu">
+                <i class="bi bi-list"></i>
+            </button>
+        </header>
+        <aside>
+            <button class="close-menu" id="close-menu">
+                <i class="bi bi-x"></i>
+            </button>
+            <header>
+                <h1 class="logo"><img src="../img/logo.png" alt="" class="logo-img"></h1>
+            </header>
+            <nav>
+                <ul class="menu">
+                    <li>
+                        <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los servicios</button>
+                    </li>
+                    <li>
+                        <button id="Habitacion" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Servicios habitacion</button>
+                    </li>
+                    <li>
+                        <button id="Entretenimiento" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Servicios entretenimiento</button>
+                    </li>
+                    <li>
+                        <button id="varios" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Servicios varios</button>
+                    </li>
+                    <!---->
+                    <!-- class="boton-menu boton-carrito" href="./carrito.html">-->
+                    <!--  <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>-->
+                    <!--a>-->
+                    <!---->
+                </ul>
+            </nav>
+            <footer>
+                <p class="texto-footer">@ 2023 </p>
+            </footer>
+        </aside>
+        <main>
+            <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
+            <div id="contenedor-productos" class="contenedor-productos">
+                <!-- Esto se va a rellenar con JS -->
+            </div>
+        </main>
+    </div>
+    
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="../JS/main.js"></script>
+    <script src="../JS/menu.js"></script>
 </body>
 </html>
