--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div id="derecho">
                     <div class="titulo">
                         Bienvenido
-                        <img src="imagenes/logo.png" alt="" id="logoIndex">
+                        <img src="img/logo.png" alt="" id="logoIndex">
                     </div>
                     <hr>
                     <div class="pie-form">
