se agregan productos

--- a/WEB/principal.html
+++ b/WEB/principal.html
@@ -31,13 +31,13 @@
                         <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los servicios</button>
                     </li>
                     <li>
-                        <button id="Habitacion" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Servicios habitacion</button>
+                        <button id="Recepción y Conserjería" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Recepción y Conserjería</button>
                     </li>
                     <li>
-                        <button id="Entretenimiento" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Servicios entretenimiento</button>
+                        <button id="Alojamiento" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Alojamiento</button>
                     </li>
                     <li>
-                        <button id="varios" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Servicios varios</button>
+                        <button id="Restaurante y Bar" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Restaurante y Bar</button>
                     </li>
                     <!---->
                     <!-- class="boton-menu boton-carrito" href="./carrito.html">-->
