--- a/WEB/principal.html
+++ b/WEB/principal.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../CSS/main.css">
 </head>
+
 <body>
 
     <div class="wrapper">
@@ -28,22 +30,26 @@
             <nav>
                 <ul class="menu">
                     <li>
-                        <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los servicios</button>
+                        <button id="todos" class="boton-menu boton-categoria active"><i
+                                class="bi bi-hand-index-thumb-fill"></i> Todos los servicios</button>
                     </li>
                     <li>
-                        <button id="Recepción y Conserjería" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Recepción y Conserjería</button>
+                        <button id="Recepción y Conserjería" class="boton-menu boton-categoria"><i
+                                class="bi bi-hand-index-thumb"></i> Recepción y Conserjería</button>
                     </li>
                     <li>
-                        <button id="Alojamiento" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Alojamiento</button>
+                        <button id="Alojamiento" class="boton-menu boton-categoria"><i
+                                class="bi bi-hand-index-thumb"></i> Alojamiento</button>
                     </li>
                     <li>
-                        <button id="Restaurante y Bar" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Restaurante y Bar</button>
+                        <button id="Restaurante y Bar" class="boton-menu boton-categoria"><i
+                                class="bi bi-hand-index-thumb"></i> Restaurante y Bar</button>
                     </li>
-                    <!---->
-                    <!-- class="boton-menu boton-carrito" href="./carrito.html">-->
-                    <!--  <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>-->
-                    <!--a>-->
-                    <!---->
+                    <li>
+                        <button id="Instalaciones de Bienestar" class="boton-menu boton-categoria"><i
+                                class="bi bi-hand-index-thumb"></i> Instalaciones de Bienestar</button>
+                    </li>
+                    <!-- Agrega otros elementos del menú aquí según sea necesario -->
                 </ul>
             </nav>
             <footer>
@@ -55,11 +61,16 @@
             <div id="contenedor-productos" class="contenedor-productos">
                 <!-- Esto se va a rellenar con JS -->
             </div>
+            <div class="paginacion">
+                <button id="pagina-anterior" class="button-page">Página anterior</button>
+                <button id="pagina-siguiente" class="button-page">Página siguiente</button>
+            </div>
         </main>
     </div>
-    
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="../JS/main.js"></script>
     <script src="../JS/menu.js"></script>
 </body>
+
 </html>
